@@ -2,7 +2,9 @@
 Changes in version 0.7-1 (2016-05-23)
 
   o respect var.lwd in 2D plot.candisc()
-  o heplot.candisc gets a rev.axes argument
+  o heplot.candisc() gets a rev.axes argument to reverse the axes and a var.pos argument to position  variable labels
+  o vectors() now produces nicer arrow head a la matlib::vectors()
+  
 
 Changes in version 0.7-0 (2016-04-25)
 
